--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
-    id 'com.moowork.node' version '1.2.0' apply false
-    id 'com.palantir.git-version' version '0.11.0'
-    id 'nebula.dependency-recommender' version '5.1.0' apply false
-    id 'org.inferred.processors' version '1.2.16' apply false
+    id 'com.github.spotbugs' version '3.0.0'
+    id 'com.moowork.node' version '1.3.1' apply false
+    id 'com.palantir.git-version' version '0.12.2'
+    id 'nebula.dependency-recommender' version '9.0.1' apply false
+    id 'org.inferred.processors' version '3.1.0' apply false
 }
 
 allprojects {
