--- a/java/gradle/java.gradle
+++ b/java/gradle/java.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'checkstyle'
-apply plugin: 'findbugs'
+apply plugin: 'com.github.spotbugs'
 apply plugin: 'pmd'
 apply plugin: 'idea'
 apply plugin: 'nebula.dependency-recommender'
@@ -17,9 +17,9 @@ checkstyle {
     configDir file("${rootProject.rootDir}/java/checkstyle")
 }
 
-findbugs {
-    excludeFilter file("${rootProject.rootDir}/java/findbugs/excludeFilter.xml")
-}
+//findbugs {
+//    excludeFilter file("${rootProject.rootDir}/java/findbugs/excludeFilter.xml")
+//}
 
 tasks.withType(Checkstyle) {
     reports {
@@ -28,12 +28,12 @@ tasks.withType(Checkstyle) {
     }
 }
 
-tasks.withType(FindBugs) {
-    reports {
-        xml.enabled false
-        html.enabled true
-    }
-}
+//tasks.withType(FindBugs) {
+//    reports {
+//        xml.enabled false
+//        html.enabled true
+//    }
+//}
 
 tasks.withType(Pmd){
     reports{
