--- a/javascript/webapp/package.json
+++ b/javascript/webapp/package.json
@@ -10,41 +10,35 @@
         "watch": "webpack --watch --config webpack.dev.js"
     },
     "dependencies": {
-        "@material-ui/core": "^3.1.0",
-        "@material-ui/icons": "^3.0.1",
-        "@okta/okta-react": "^1.1.0",
-        "@okta/okta-signin-widget": "^2.13.0",
-        "@types/classnames": "^2.2.6",
-        "@types/lodash": "^4.14.116",
-        "@types/react": "^16.4.14",
-        "@types/react-dom": "^16.0.7",
-        "@types/react-redux": "^6.0.9",
-        "@types/react-router": "^4.0.31",
-        "@types/react-router-dom": "^4.3.1",
-        "@types/redux": "^3.6.0",
-        "@types/redux-logger": "^3.0.6",
-        "@types/redux-thunk": "^2.1.0",
+        "@types/lodash": "^4.14.149",
+        "@types/react": "^16.9.16",
+        "@types/react-dom": "^16.9.4",
+        "@types/react-redux": "^7.1.5",
+        "@types/react-router": "^5.1.3",
+        "@types/react-router-dom": "^5.1.3",
+        "@types/redux-logger": "^3.0.7",
         "api": "^0.0.1",
-        "lodash": "^4.17.10",
-        "react": "^16.5.1",
-        "react-dom": "^16.5.1",
-        "react-redux": "^5.0.7",
-        "react-router": "^4.3.1",
-        "react-router-dom": "^4.3.1",
-        "redux": "^4.0.0",
+        "lodash": "^4.17.15",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-redux": "^7.1.3",
+        "react-router": "^5.1.2",
+        "react-router-dom": "^5.1.2",
+        "redoodle": "^2.3.2",
+        "redux": "^4.0.4",
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
-        "css-loader": "^1.0.0",
-        "file-loader": "^2.0.0",
+        "css-loader": "^3.4.0",
+        "file-loader": "^5.0.2",
         "html-webpack-plugin": "^3.2.0",
-        "node-sass": "^4.9.3",
-        "sass-loader": "^7.1.0",
-        "style-loader": "^0.23.0",
-        "ts-loader": "^5.1.1",
-        "tslint": "^5.11.0",
-        "typescript": "^3.0.3",
+        "node-sass": "^4.13.0",
+        "sass-loader": "^8.0.0",
+        "style-loader": "^1.0.2",
+        "ts-loader": "^6.2.1",
+        "tslint": "^5.20.1",
+        "typescript": "^3.7.3",
         "webpack-chunk-hash": "^0.6.0"
     }
 }
