--- a/java/gradle/immutables.gradle
+++ b/java/gradle/immutables.gradle
@@ -3,5 +3,6 @@ apply plugin: 'org.inferred.processors'
 dependencies {
     implementation project(':java:immutables')
 
+    implementation 'org.immutables:value'
     processor 'org.immutables:value'
 }
