--- a/javascript/api/package.json
+++ b/javascript/api/package.json
@@ -8,13 +8,9 @@
     "main": "lib/api.js",
     "types": "lib/index.d.ts",
     "devDependencies": {
-        "ts-loader": "^5.1.1",
-        "tslint": "^5.11.0",
-        "typescript": "^3.0.3"
+        "ts-loader": "^6.2.1",
+        "tslint": "^5.20.1",
+        "typescript": "^3.7.3"
     },
-    "dependencies": {
-        "@types/promise": "^7.1.30",
-        "@types/whatwg-fetch": "^0.0.33",
-        "whatwg-fetch": "^3.0.0"
-    }
+    "dependencies": {}
 }
