--- a/javascript/api/tsconfig.json
+++ b/javascript/api/tsconfig.json
@@ -5,6 +5,7 @@
       "noImplicitAny": true,
       "module": "commonjs",
       "target": "es5",
-      "declaration": true
+      "declaration": true,
+      "lib": [ "DOM", "ES2015" ]
    }
 }
